src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>c2g__CODAIntercompanyAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInvoiceEmail__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__CODAMergeId__c</fullName>
        <label>Merge Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAOutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPaymentMethod__c</fullName>
        <description>The payment method</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAReportingCode__c</fullName>
        <description>A unique code used for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAShippingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(ShippingStreet) &amp;&amp;
ISBLANK(ShippingCity) &amp;&amp;
ISBLANK(ShippingState) &amp;&amp;
ISBLANK(ShippingPostalCode) &amp;&amp;
ISBLANK(ShippingCountry)) &amp;&amp;
c2g__CODAValidatedShippingStreet__c == ShippingStreet &amp;&amp;
c2g__CODAValidatedShippingCity__c == ShippingCity &amp;&amp;
c2g__CODAValidatedShippingState__c == ShippingState &amp;&amp;
c2g__CODAValidatedShippingPostCode__c == ShippingPostalCode &amp;&amp;
c2g__CODAValidatedShippingCountry__c == ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCalculationMethod__c</fullName>
        <description>The method of calculating tax in the UK.</description>
        <label>Tax Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                    <default>true</default>
                    <label>Gross</label>
                </value>
                <value>
                    <fullName>Net of Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
        <description>Taxpayer Identification Number</description>
        <label>Taxpayer Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCity__c</fullName>
        <label>ValidatedBillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCountry__c</fullName>
        <label>ValidatedBillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingPostCode__c</fullName>
        <label>ValidatedBillingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingState__c</fullName>
        <label>ValidatedBillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
        <label>ValidatedBillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCity__c</fullName>
        <label>ValidatedShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
        <label>ValidatedShippingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
        <label>ValidatedShippingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingState__c</fullName>
        <label>ValidatedShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingStreet__c</fullName>
        <label>ValidatedShippingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__Total_Child_Records__c</fullName>
        <label>Total Child Records</label>
        <summaryForeignKey>datapro__Privacy_Detail_PersonAccount__c.datapro__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffaci__CurrencyCulture__c</fullName>
        <label>Currency Culture</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce Account to use for the Billing Address.</description>
        <inlineHelpText>Lookup to the Salesforce Account to use for the Billing Address.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Billing Accounts</relationshipLabel>
        <relationshipName>SubAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountParticulars__c</fullName>
        <label>Account Particulars</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankBIC__c</fullName>
        <label>Bank BIC</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCode__c</fullName>
        <label>Payment Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCountryISO__c</fullName>
        <label>Payment Country ISO</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentPriority__c</fullName>
        <label>Payment Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__PaymentRoutingMethod__c</fullName>
        <label>Payment Routing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ExemptionCertificate__c</fullName>
        <description>Tax exemption certificate for the account. We recommend that you use the tax exemption features of Avalara. Use this field only when you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</description>
        <inlineHelpText>Tax exemption certificate for the account. Enter a value if you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</inlineHelpText>
        <label>Exemption Certificate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(BillingStreet) &amp;&amp;
              ISBLANK(BillingCity) &amp;&amp; 
              ISBLANK(BillingState) &amp;&amp;
              ISBLANK(BillingPostalCode) &amp;&amp;
              ISBLANK(BillingCountry) 
            ) &amp;&amp; 
            ( BillingStreet  =  fferpcore__ValidatedBillingStreet__c ) &amp;&amp;
            ( BillingCity =  fferpcore__ValidatedBillingCity__c ) &amp;&amp;
            ( BillingState =  fferpcore__ValidatedBillingState__c ) &amp;&amp;  
            ( BillingPostalCode =  fferpcore__ValidatedBillingPostalCode__c ) &amp;&amp;
            ( BillingCountry =  fferpcore__ValidatedBillingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(ShippingStreet) &amp;&amp;
              ISBLANK(ShippingCity) &amp;&amp; 
              ISBLANK(ShippingState) &amp;&amp;
              ISBLANK(ShippingPostalCode) &amp;&amp;
              ISBLANK(ShippingCountry) 
            ) &amp;&amp; 
            ( ShippingStreet  =  fferpcore__ValidatedShippingStreet__c ) &amp;&amp;
            ( ShippingCity =  fferpcore__ValidatedShippingCity__c ) &amp;&amp;
            ( ShippingState =  fferpcore__ValidatedShippingState__c ) &amp;&amp;  
            ( ShippingPostalCode =  fferpcore__ValidatedShippingPostalCode__c ) &amp;&amp;
            ( ShippingCountry =  fferpcore__ValidatedShippingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__OutputVatCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
        <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
        <label>Output VAT/GST Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesTaxStatus__c</fullName>
        <description>The tax status for this account for SUT companies.</description>
        <inlineHelpText>The tax status for this account for SUT companies.</inlineHelpText>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first SUT tax code for this account.</description>
        <inlineHelpText>The first SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 1</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second SUT tax code for this account.</description>
        <inlineHelpText>The second SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 2</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The third SUT tax code for this account.</description>
        <inlineHelpText>The third SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 3</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCountryCode__c</fullName>
        <description>Code for the European Union country in which this account operates. You can update the entries in this custom picklist if required.
The country code is required for the correct reporting of VAT on cross-border trades within the European Union.</description>
        <inlineHelpText>The country code for this account. This is required for correct reporting of VAT on cross-border trades within the European Union.</inlineHelpText>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCity__c</fullName>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingState__c</fullName>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingStreet__c</fullName>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCity__c</fullName>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingState__c</fullName>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatRegistrationNumber__c</fullName>
        <description>Identifying number used for VAT purposes.</description>
        <inlineHelpText>Identifying number used for tax purposes.</inlineHelpText>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatStatus__c</fullName>
        <description>The tax status for this account for VAT/GST accounts.</description>
        <inlineHelpText>The tax status for this account for VAT/GST accounts.</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_accBalance__CalculatedBalance__c</fullName>
        <description>Holds the automatically calculated balance for the Account.</description>
        <label>Calculated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__CalculatedCredits__c</fullName>
        <label>Calculated Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__CalculatedDebits__c</fullName>
        <label>Calculated Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__ExcludeFromBalanceCalculations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Balance Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__LastBalanceUpdate__c</fullName>
        <label>Last Balance Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Consolidation_Type__c</fullName>
        <label>Consolidation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Rent and Services</fullName>
                </value>
                <value>
                    <fullName>Do not Consolidate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_custRem__Balance_Needs_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set, means the reminder process found overdue SINs for this Account, but it is also in credit (in that currency/company). This means no reminder was sent.</description>
        <inlineHelpText>If set, means the reminder process found overdue SINs for this Account, but it is also in credit (in that currency/company). This means no reminder was sent.</inlineHelpText>
        <label>Balance Needs Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Exclude_From_Reminder_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this flag to exclude this Account from the reminder process (means no reminders will be generated for it).</description>
        <inlineHelpText>Set this flag to exclude this Account from the reminder process (means no reminders will be generated for it).</inlineHelpText>
        <label>Exclude From Reminder Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Exclude_From_Statement_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Statement Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Last_Reminder_Generated_Date__c</fullName>
        <description>The most recent date/time a reminder was generated for this Account.</description>
        <inlineHelpText>The most recent date/time a reminder was generated for this Account.</inlineHelpText>
        <label>Last Reminder Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Last_Reminder_Severity_Level__c</fullName>
        <description>The severity of the most recent reminder generated for this Account.</description>
        <inlineHelpText>The severity of the most recent reminder generated for this Account.</inlineHelpText>
        <label>Last Reminder Severity Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Last_Statement_Generated_Date__c</fullName>
        <label>Last Statement Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Preferred_Communication_Channel__c</fullName>
        <label>Preferred Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_custRem__Reminders_Blocked_Until_Date__c</fullName>
        <description>Earliest date at which a further reminder can be sent for this Account.</description>
        <inlineHelpText>Earliest date at which a further reminder can be sent for this Account.</inlineHelpText>
        <label>Reminders Blocked Until Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Agent_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Agent_Broker</value>
        </filters>
        <label>Agent Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>Legal_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Legal</value>
        </filters>
        <label>Legal Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner</value>
        </filters>
        <label>Partner Accounts</label>
    </listViews>
    <listViews>
        <fullName>Sublet_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Sublet</value>
        </filters>
        <label>Sublet Accounts</label>
    </listViews>
    <listViews>
        <fullName>Supplier_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Supplier</value>
        </filters>
        <label>Supplier Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Agent_Broker</fullName>
        <active>true</active>
        <label>Agent/Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal</fullName>
        <active>true</active>
        <label>Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sublet</fullName>
        <active>true</active>
        <label>Sublet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <label>Supplier</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>